--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>Click on each project title to learn more:
             </p>
             <a href="" style="font-size: 22px; text-decoration: underline;">Archivra</a>
-            <p>WORK IN PROGRESS: 3D digitze collections from videos using COLMAP and NeRFs with NVIDIA's instant neural graphics primitives implementations</p>
+            <p>WORK IN PROGRESS: 3D digitize collections from videos using COLMAP and NeRFs with NVIDIA's instant neural graphics primitives implementations</p>
             <a href="https://github.com/tmattkim/cardioslice" style="font-size: 22px; text-decoration: underline;">CardoSlice</a>
             <p>Cardiac segmentation using 3D U-Net and 3D visualization with synchronized 2D cardiovascular MRI slices
             </p>
