--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <title>Matthew Kim</title>
 </head>
 <body>
-    <div class="grid-2">
+    <!--<div class="grid-2">-->
         <div class="section-1">
             <i class="fas fa-globe-americas fa-5x white"></i>
             <h2>Matthew Kim</h2>
             <p>I study <u>science</u> to learn what a human is.</p>
             <p>I study <u>engineering</u> to improve human life.</p>
             <p>I study <u>humanities</u> to become a better human.</p>
-            <a href="mailto:tmattkim@stanford.edu"><i class="fas fa-envelope"></i></a>
-            <a href="https://www.linkedin.com/in/t-matthew-kim/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/tmattkim"><i class="fab fa-github"></i></a>
+            <div class="social-links">
+                <a href="mailto:tmattkim@stanford.edu"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/t-matthew-kim/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/tmattkim"><i class="fab fa-github"></i></a>
+            </div>
         </div>
         <div class="section-2">
             <h2>About</h2>
@@ -66,6 +68,6 @@
                 <li>Love to golf, hike, and travel</li>
             </ul>
         </div>
-    </div>
+    <!--</div>-->
 </body>
 </html>
