Edits and scrolling animations

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
     <title>Matthew Kim</title>
 </head>
 <body>
     <!--<div class="grid-2">-->
-        <div class="section-1">
+        <div class="section-1" data-aos="zoom-in">
             <i class="fas fa-globe-americas fa-5x white"></i>
             <h2>Matthew Kim</h2>
             <p>I study <u>science</u> to learn what a human is.</p>
@@ -23,51 +24,110 @@
             </div>
         </div>
         <div class="section-2">
+            <div data-aos="fade-up">
             <h2>About</h2>
             <p>Hi there! I am a junior at Stanford University studying biology, computer science, and international security. 
                 I am interested in the intersection of science and technology with politics and law to advance biomedical innovation.
             </p>
+            </div>
+            <div data-aos="fade-up">
             <h2>Experience</h2>
             <p>Here is a snippet of my prior and current experience:</p>
+            </div>
             <ul>
+                <div data-aos="fade-left">
                 <li>Course Development Assistant for the course BIOE 70Q (Medical Device Innovation)</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Endourology research investigating kidney stone treatment for recurrent UTI patients</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Organ transplantation research building ex-vivo perfusion systems</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Chemistry tutor with the Stanford Center for Teaching and Learning</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Stanford Constitutional Law Center Undergraduate Fellow learning constitutional law and politics</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Former Hoover Student Fellow and current Research Assistant at the Hoover Institution researching about international collaborations in science and technology</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Clinical Volunteer Director at the Palo Alto Veteran Affairs Medical Center implementing a VR therapy consult service</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Former Interclinic Computation + Data + Tech Chair and current Lab Assistant Chair at Cardinal Free Clinics</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Biochemistry research designing fungicides</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Neurocritical care research at UCI</li>
+                </div>
             </ul>
+            <div data-aos="fade-up">
             <h2>Projects</h2>
             <p>Click on each project title to learn more:
             </p>
+            </div>
+            <div data-aos="fade-left">
             <a href="" style="font-size: 22px; text-decoration: underline;">Archivra</a>
             <p>WORK IN PROGRESS: 3D digitize collections from videos using COLMAP and NeRFs with NVIDIA's instant neural graphics primitives implementations</p>
+            </div>
+            <div data-aos="fade-left">
             <a href="https://github.com/tmattkim/cardioslice" style="font-size: 22px; text-decoration: underline;">CardoSlice</a>
-            <p>Cardiac segmentation using 3D U-Net and 3D visualization with synchronized 2D cardiovascular MRI slices
+            <p>Cardiac segmentation using 3D UNet and 3D visualization with synchronized 2D cardiovascular MRI slices
             </p>
+            </div>
+            <div data-aos="fade-left">
             <a href="https://drive.google.com/file/d/1WTMVVZFNQWEbIqdq57fUyAjgydYw49XQ/view" style="font-size: 22px; text-decoration: underline;">Biventricular Loading During EVHP</a>
             <p>A next generation biventricular working heart ex-vivo perfusion (EVHP) system
             </p>
+            </div>
+            <div data-aos="fade-left">
             <a href="https://drive.google.com/file/d/14dLnMCB_BdAiSYxMCuT4UGzmUZgsIfN1/view" style="font-size: 22px; text-decoration: underline;">Stone Treatment for Concurrent rUTI and Kidney Stones</a>
             <p>Investigating factors involved in stone treatment for patients with recurrent urinary tract infections (rUTI) and concurrent nephrolithiasis to develop statistically refined protocols</p>
+            </div>
+            <div data-aos="fade-left">
             <a href="https://drive.google.com/file/d/12jgYWXr3W1Eq8x7PbmVy1wrGe71qDwDu/view" style="font-size: 22px; text-decoration: underline;">The Future of International Collaborations in S&T</a>
             <p>Detailing how to maximize the benefits of international collaborations in science and technology (S&T) while minimizing the risk</p>
+            </div>
+            <div data-aos="fade-left">
             <a href="https://drive.google.com/file/d/1n4qVE0MXLPFZAltYX2TKMZeZX4H6lQyP/view" style="font-size: 22px; text-decoration: underline;">Design of Novel Inhibitors for BcCdc14</a>
             <p>Designed a novel fungicide targeting Cdc14 phosphatase in the fungal pathogen Botrytis cinerea</p>
+            </div>
+            <div data-aos="fade-left">
             <a href="https://drive.google.com/file/d/1G9-9UjUqW1OepI52k4bjSqmwKEArNB2M/view" style="font-size: 22px; text-decoration: underline;">The Spreading Depolarization-Arrhythmia Relationship</a>
             <p>Wrote a research review on the relationship between the onsets of cardiac arrhythmia and spreading depolarization</p>
+            </div>
+            <div data-aos="fade-up">
             <h2>Fun Facts About Me!</h2>
+            </div>
             <ul>
+                <div data-aos="fade-left">
                 <li>Fossil collector since 2012 (collection ranging from pyritized trilobites to T-rex teeth)</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Avid origamist</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Twisty puzzle enthusiast</li>
+                </div>
+                <div data-aos="fade-left">
                 <li>Love to golf, hike, and travel</li>
+                </div>
             </ul>
         </div>
     <!--</div>-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+          AOS.init({
+            duration: 800,
+            /* once: true */
+          });
+        });
+    </script>
 </body>
 </html>
