--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             </p>
             </div>
             <div data-aos="fade-left">
+                <a href="https://github.com/tmattkim/educagen" style="font-size: 22px; text-decoration: underline;">Educagen</a>
+                <p>AI-powered course generator web app using Google's Gemini LLM API and Streamlit
+                </p>
+                </div>
+            <div data-aos="fade-left">
             <a href="https://drive.google.com/file/d/1WTMVVZFNQWEbIqdq57fUyAjgydYw49XQ/view" style="font-size: 22px; text-decoration: underline;">Biventricular Loading During EVHP</a>
             <p>A next generation biventricular working heart ex-vivo perfusion (EVHP) system
             </p>
