Fixed centering, text wraps, gradient color text

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="section-1" data-aos="zoom-in">
             <i class="fas fa-globe-americas fa-5x white"></i>
             <h2>Matthew Kim</h2>
-            <p>I study <u>science</u> to learn what a human is.</p>
-            <p>I study <u>engineering</u> to improve human life.</p>
-            <p>I study <u>humanities</u> to become a better human.</p>
+            <p>I study <p1 class="animated-gradient-text">science</p1> to learn what a human is.</p>
+            <p>I study <p1 class="animated-gradient-text">engineering</p1> to improve human life.</p>
+            <p>I study <p1 class="animated-gradient-text">humanities</p1> to become a better human.</p>
             <div class="social-links">
                 <a href="mailto:tmattkim@stanford.edu"><i class="fas fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/t-matthew-kim/"><i class="fab fa-linkedin"></i></a>
