--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             <p>WORK IN PROGRESS: 3D digitize collections from videos using COLMAP and NeRFs with NVIDIA's instant neural graphics primitives implementations</p>
             </div>
             <div data-aos="fade-left">
+                <a href="https://drive.google.com/file/d/1YQq0Eo4k2AGZxSUx-Eixiy07Tiaez6iB/view?usp=sharing" style="font-size: 22px; text-decoration: underline;">Logo Classification and Detection for LLM-Powered GUI Navigation</a>
+                <p>A comprehensive system for logo classification and detection to enable LLMs to navigate GUIs using screenshot data (CS 231N "Deep Learning for Computer Vision" Final Project)
+                </p>
+                </div>
+            <div data-aos="fade-left">
             <a href="https://github.com/tmattkim/cardioslice" style="font-size: 22px; text-decoration: underline;">CardoSlice</a>
             <p>Cardiac segmentation using 3D UNet and 3D visualization with synchronized 2D cardiovascular MRI slices
             </p>
