Added Mini-Marin and emojis to fun facts

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
             </p>
             </div>
             <div data-aos="fade-left">
+                <a href="https://github.com/tmattkim/mini_marin" style="font-size: 22px; text-decoration: underline;">Mini-Marin</a>
+                <p>Inspired by Stanford's Marin project. A complete pipeline to train a small LLM from scratch.
+                </p>
+                </div>
+            <div data-aos="fade-left">
                 <a href="https://drive.google.com/file/d/1YQq0Eo4k2AGZxSUx-Eixiy07Tiaez6iB/view?usp=sharing" style="font-size: 22px; text-decoration: underline;">Logo Classification and Detection for LLM-Powered GUI Navigation</a>
                 <p>A comprehensive system for logo classification and detection to enable LLMs to navigate GUIs using screenshot data (CS 231N "Deep Learning for Computer Vision" Final Project)
                 </p>
@@ -112,16 +117,16 @@
             </div>
             <ul>
                 <div data-aos="fade-left">
-                <li>Fossil collector since 2012 (collection ranging from pyritized trilobites to T-rex teeth)</li>
+                <li>🦴 Fossil collector since 2012 (collection ranging from pyritized trilobites to T-rex teeth)</li>
                 </div>
                 <div data-aos="fade-left">
-                <li>Avid origamist</li>
+                <li>📃 Avid origamist</li>
                 </div>
                 <div data-aos="fade-left">
-                <li>Twisty puzzle enthusiast</li>
+                <li>🧩 Twisty puzzle enthusiast</li>
                 </div>
                 <div data-aos="fade-left">
-                <li>Love to golf, hike, and travel</li>
+                <li>⛳ Love to golf, hike, and travel</li>
                 </div>
             </ul>
         </div>
