Added Build+ experience

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </div>
             <ul>
                 <div data-aos="fade-left">
+                    <li>Build+ Fellow at Y+ Ventures</li>
+                    </div>
+                <div data-aos="fade-left">
                 <li>Course Development Assistant for the course BIOE 70Q (Medical Device Innovation)</li>
                 </div>
                 <div data-aos="fade-left">
